--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV Alliva Azzahra</title>
+    <style>
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f9; color: #333; }
+        .container { max-width: 800px; margin: 30px auto; background: #fff; padding: 40px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        header { text-align: center; border-bottom: 2px solid #eee; padding-bottom: 20px; }
+        .profile-img { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 4px solid #007bff; margin-bottom: 15px; }
+        h1 { margin: 10px 0; color: #007bff; }
+        .info { display: flex; flex-wrap: wrap; justify-content: space-around; margin: 20px 0; font-size: 0.9em; background: #f9f9f9; padding: 15px; border-radius: 8px; }
+        section { margin-top: 25px; }
+        h2 { border-left: 5px solid #007bff; padding-left: 10px; color: #333; font-size: 1.2em; text-transform: uppercase; }
+        ul { padding-left: 20px; }
+        .badge { background: #007bff; color: white; padding: 3px 10px; border-radius: 20px; font-size: 0.8em; margin-right: 5px; display: inline-block; }
+        .footer { text-align: center; margin-top: 30px; font-size: 0.8em; color: #888; }
+        a { color: #007bff; text-decoration: none; }
+    </style>
 </head>
 <body>
-    Hello World!
+
+<div class="container">
+    <header>
+        <img src="00000000247c71faaf2e033db798c613.png" alt="Foto Alliva Azzahra" class="profile-img">
+        <h1>Alliva Azzahra</h1>
+        <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
+    </header>
+
+    <div class="info">
+        <div>📍 Griya Bandung Asri 1 Blok D No 226</div>
+        <div>📞 081225087590</div>
+        <div>🎂 10 Desember 2007</div>
+        <div>📱 IG: <a href="https://instagram.com/zarrav.a" target="_blank">@zarrav.a</a></div>
+    </div>
+
+    <section>
+        <h2>Pendidikan</h2>
+        <ul>
+            <li><strong>SDI Al-Azhar 8 Kembangan</strong> (Lulus 2020)</li>
+            <li><strong>SMP Bina Taruna</strong> (Lulus 2023)</li>
+            <li><strong>SMA Karya Pembangunan Baleendah</strong> (Lulus 2026 - Expected)</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Pengalaman</h2>
+        <ul>
+            <li><strong>Wirausaha Mandiri (Jualan Milo):</strong> Aktif sejak masa SD, SMP, hingga SMA (Hingga 2026). Melatih jiwa kewirausahaan dan manajemen keuangan sejak dini.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Keahlian & Bahasa</h2>
+        <p><strong>Skill:</strong> <span class="badge">Komunikasi Baik</span> <span class="badge">Public Speaking</span></p>
+        <p><strong>Bahasa:</strong> Indonesia (Native), Jepang, Mandarin</p>
+    </section>
+
+    <section>
+        <h2>Sertifikat & Prestasi</h2>
+        <ul>
+            <li>Juara 2 TKA Bahasa Jepang</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Hobby</h2>
+        <p>Dance dan Menyanyi lagu K-pop</p>
+    </section>
+
+    <div class="footer">
+        &copy; 2026 Alliva Azzahra - Dibuat untuk Portofolio GitHub
+    </div>
+</div>
+
 </body>
 </html>
