--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="container">
     <header>
-        <img src="00000000247c71faaf2e033db798c613.png" alt="Foto Alliva Azzahra" class="profile-img">
+        <img src=" Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra" class="profile-img">
         <h1>Alliva Azzahra</h1>
         <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
     </header>
