--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="container">
     <header>
-        <img src="Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra">
+        <img src="WhatsApp Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra">
         <h1>Alliva Azzahra</h1>
         <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
     </header>
@@ -75,4 +75,4 @@
 </div>
 
 </body>
-</html>
+</html>>
