--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         .footer { text-align: center; margin-top: 30px; font-size: 0.8em; color: #888; }
         a { color: #007bff; text-decoration: none; }
     </style>
-</head>
+</hea
 <body>
 
 <div class="container">
     <header>
-        <img src="WhatsApp Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra">
+        <img src="WhatsApp Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra" class="profile-img">
+
         <h1>Alliva Azzahra</h1>
         <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
     </header>
