--- a/index.html
+++ b/index.html
@@ -4,21 +4,131 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Alliva Azzahra</title>
+
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f9; color: #333; }
-        .container { max-width: 800px; margin: 30px auto; background: #fff; padding: 40px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
-        header { text-align: center; border-bottom: 2px solid #eee; padding-bottom: 20px; }
-        .profile-img { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 4px solid #007bff; margin-bottom: 15px; }
-        h1 { margin: 10px 0; color: #007bff; }
-        .info { display: flex; flex-wrap: wrap; justify-content: space-around; margin: 20px 0; font-size: 0.9em; background: #f9f9f9; padding: 15px; border-radius: 8px; }
-        section { margin-top: 25px; }
-        h2 { border-left: 5px solid #007bff; padding-left: 10px; color: #333; font-size: 1.2em; text-transform: uppercase; }
-        ul { padding-left: 20px; }
-        .badge { background: #007bff; color: white; padding: 3px 10px; border-radius: 20px; font-size: 0.8em; margin-right: 5px; display: inline-block; }
-        .footer { text-align: center; margin-top: 30px; font-size: 0.8em; color: #888; }
-        a { color: #007bff; text-decoration: none; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #ffe6f2;
+            color: #333;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 30px auto;
+            background: #fff;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+
+        header {
+            text-align: center;
+            border-bottom: 2px solid #ffd1e8;
+            padding-bottom: 20px;
+        }
+
+        .profile-img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #ff4da6;
+            margin-bottom: 15px;
+        }
+
+        h1 {
+            margin: 10px 0;
+            color: #ff4da6;
+        }
+
+        .info {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin: 20px 0;
+            font-size: 0.9em;
+            background: #fff0f6;
+            padding: 15px;
+            border-radius: 8px;
+        }
+
+        section {
+            margin-top: 25px;
+        }
+
+        h2 {
+            border-left: 5px solid #ff4da6;
+            padding-left: 10px;
+            color: #333;
+            font-size: 1.2em;
+            text-transform: uppercase;
+        }
+
+        ul {
+            padding-left: 20px;
+        }
+
+        .badge {
+            background: #ff4da6;
+            color: white;
+            padding: 3px 10px;
+            border-radius: 20px;
+            font-size: 0.8em;
+            margin-right: 5px;
+            display: inline-block;
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            font-size: 0.8em;
+            color: #888;
+        }
+
+        a {
+            color: #ff4da6;
+            text-decoration: none;
+        }
+
+        /* 🍭 LOLLIPOP */
+        .lollipop {
+            width: 80px;
+            height: 80px;
+            margin: 15px auto;
+            border-radius: 50%;
+            background: repeating-radial-gradient(
+                circle,
+                #ff69b4,
+                #ff69b4 10px,
+                #ffb6c1 10px,
+                #ffb6c1 20px
+            );
+            position: relative;
+            animation: spinCandy 6s linear infinite;
+        }
+
+        .lollipop::after {
+            content: "";
+            position: absolute;
+            width: 12px;
+            height: 60px;
+            background: #fff;
+            bottom: -55px;
+            left: 50%;
+            transform: translateX(-50%);
+            border-radius: 6px;
+        }
+
+        @keyframes spinCandy {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
     </style>
-</hea
+</head>
+
 <body>
 
 <div class="container">
@@ -27,6 +137,9 @@
 
         <h1>Alliva Azzahra</h1>
         <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
+
+        <!-- 🍭 Animasi Lollipop -->
+        <div class="lollipop"></div>
     </header>
 
     <div class="info">
@@ -54,7 +167,10 @@
 
     <section>
         <h2>Keahlian & Bahasa</h2>
-        <p><strong>Skill:</strong> <span class="badge">Komunikasi Baik</span> <span class="badge">Public Speaking</span></p>
+        <p><strong>Skill:</strong>
+            <span class="badge">Komunikasi Baik</span>
+            <span class="badge">Public Speaking</span>
+        </p>
         <p><strong>Bahasa:</strong> Indonesia (Native), Jepang, Mandarin</p>
     </section>
 
@@ -76,4 +192,4 @@
 </div>
 
 </body>
-</html>>
+</html>
