--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Alliva Azzahra</title>
-
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #ffe6f2;
+            background-color: #f4f4f9;
             color: #333;
         }
 
@@ -26,22 +25,13 @@
 
         header {
             text-align: center;
-            border-bottom: 2px solid #ffd1e8;
+            border-bottom: 2px solid #eee;
             padding-bottom: 20px;
-        }
-
-        .profile-img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 4px solid #ff4da6;
-            margin-bottom: 15px;
         }
 
         h1 {
             margin: 10px 0;
-            color: #ff4da6;
+            color: #007bff;
         }
 
         .info {
@@ -50,7 +40,7 @@
             justify-content: space-around;
             margin: 20px 0;
             font-size: 0.9em;
-            background: #fff0f6;
+            background: #f9f9f9;
             padding: 15px;
             border-radius: 8px;
         }
@@ -60,7 +50,7 @@
         }
 
         h2 {
-            border-left: 5px solid #ff4da6;
+            border-left: 5px solid #007bff;
             padding-left: 10px;
             color: #333;
             font-size: 1.2em;
@@ -72,7 +62,7 @@
         }
 
         .badge {
-            background: #ff4da6;
+            background: #007bff;
             color: white;
             padding: 3px 10px;
             border-radius: 20px;
@@ -89,57 +79,18 @@
         }
 
         a {
-            color: #ff4da6;
+            color: #007bff;
             text-decoration: none;
-        }
-
-        /* 🍭 LOLLIPOP */
-        .lollipop {
-            width: 80px;
-            height: 80px;
-            margin: 15px auto;
-            border-radius: 50%;
-            background: repeating-radial-gradient(
-                circle,
-                #ff69b4,
-                #ff69b4 10px,
-                #ffb6c1 10px,
-                #ffb6c1 20px
-            );
-            position: relative;
-            animation: spinCandy 6s linear infinite;
-        }
-
-        .lollipop::after {
-            content: "";
-            position: absolute;
-            width: 12px;
-            height: 60px;
-            background: #fff;
-            bottom: -55px;
-            left: 50%;
-            transform: translateX(-50%);
-            border-radius: 6px;
-        }
-
-        @keyframes spinCandy {
-            from { transform: rotate(0deg); }
-            to { transform: rotate(360deg); }
         }
     </style>
 </head>
 
 <body>
-
 <div class="container">
     <header>
-        <img src="WhatsApp Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra" class="profile-img">
-
+        <img src="Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra">
         <h1>Alliva Azzahra</h1>
         <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
-
-        <!-- 🍭 Animasi Lollipop -->
-        <div class="lollipop"></div>
     </header>
 
     <div class="info">
@@ -167,10 +118,7 @@
 
     <section>
         <h2>Keahlian & Bahasa</h2>
-        <p><strong>Skill:</strong>
-            <span class="badge">Komunikasi Baik</span>
-            <span class="badge">Public Speaking</span>
-        </p>
+        <p><strong>Skill:</strong> <span class="badge">Komunikasi Baik</span> <span class="badge">Public Speaking</span></p>
         <p><strong>Bahasa:</strong> Indonesia (Native), Jepang, Mandarin</p>
     </section>
 
@@ -190,6 +138,5 @@
         &copy; 2026 Alliva Azzahra - Dibuat untuk Portofolio GitHub
     </div>
 </div>
-
 </body>
 </html>
