--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             padding-bottom: 20px;
         }
 
+        .profile-img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #007bff;
+            margin-bottom: 15px;
+        }
+
         h1 {
             margin: 10px 0;
             color: #007bff;
@@ -88,7 +97,7 @@
 <body>
 <div class="container">
     <header>
-        <img src="Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra"> class="profile-img">
+        <img src="WhatsApp Image 2026-02-04 at 11.12.31.jpeg" alt="Foto Alliva Azzahra" class="profile-img">
         <h1>Alliva Azzahra</h1>
         <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
     </header>
@@ -118,7 +127,10 @@
 
     <section>
         <h2>Keahlian & Bahasa</h2>
-        <p><strong>Skill:</strong> <span class="badge">Komunikasi Baik</span> <span class="badge">Public Speaking</span></p>
+        <p><strong>Skill:</strong>
+            <span class="badge">Komunikasi Baik</span>
+            <span class="badge">Public Speaking</span>
+        </p>
         <p><strong>Bahasa:</strong> Indonesia (Native), Jepang, Mandarin</p>
     </section>
 
