--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
 <div class="container">
     <header>
-        <img src="Image 2026-02-04 at 11.12.31.jpeg"Foto Alliva Azzahra" class="profile-img">
+        <img src="WhatsApp Image 2026-02-04 at 11.12.31.jpeg"Foto Alliva Azzahra" class="profile-img">
         <h1>Alliva Azzahra</h1>
         <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
     </header>
