--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         <img src="WhatsApp Image 2026-02-04 at 11.12.31.jpeg"Foto Alliva Azzahra" class="profile-img">
         <h1>Alliva Azzahra</h1>
         <p><strong>Tentang Saya:</strong> "Dapat bekerja dengan baik dan komunikatif."</p>
+
+        <div class="lollipop"></div>
     </header>
 
     <div class="info">
